# novaad

./: LICENSE  MANIFEST.in  README.md  TODO.md  cfg.yml  example_cmd.txt  novaad.cfg.yml  pyproject.toml  requirements.txt  setup.py
novaad/: __init__.py  __main__.py  core.py  gui.py  old__main__.py  requirements.txt
novaad/src/: __init__.py  core.py  gui.py  io.py  method.py
src/: __main__.py
test/data/: build_test_data.py  core_output.text  example_cmd.txt  example_output_device.txt  example_output_moscap.txt  example_output_switch.txt  test_input.toml  test_nch_bsim4_params.csv  test_nch_bsim4_params_renamed.csv  test_nch_lut.csv  test_nch_lut_renamed.csv  test_pch_bsim4_params.csv
