[tool.poetry]
name = "novaad"
version = "0.1.0"
description = "An Analog/Mixed-Signal IC design tool based on the Gm/Id method."
authors = ["dasdias <das.dias@campus.fct.unl.pt>"]
license = "BSD-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.0"
PyYAML = "^6.0.2"
plotly = "^5.24.0"
dash = "^2.17.1"
docopt = "^0.6.2"
scipy = "^1.14.1"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
novaad = 'novaad.__main__:main'
